rtg_tests/negative/continue_placement/go.mod
module example.com/rtgtests/negative/continue_placement

go 1.25
